Fixing project name wrapping in toolbar

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -5208,6 +5208,10 @@ select {
   min-width: 32rem;
 }
 
+.min-w-\[260px\] {
+  min-width: 260px;
+}
+
 .max-w-1 {
   max-width: 0.25rem;
 }
